--- a/params.in
+++ b/params.in
@@ -1,7 +1,16 @@
-N  1000
-softening 0.01
+# number of particles
+NUM_PARTICLES  1000
+# Newton gravitational constant
 G  1.0
-num_steps 1000
-tEnd 10000
+# Number of steps
+NUM_STEPS 22000
+# end time of simulation
+TEND 10000
+# total mass of system
 TOTAL_MASS 20.0
-nsnapshot 50
+# frequency at which data is dumped
+SNAPSHOT_FREQUENCY 50
+# output data file format, options: "dat", "csv", "vtk"
+OUTPUT_FORMAT csv
+# softening factor for close encounters
+SOFTENING 0.01
