--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@ project(DirectGrav VERSION 0.1 LANGUAGES C)
 
 include_directories(include)
 
-set(SOURCES "src/main.c")
+file(GLOB SOURCES "src/*.c")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O3 -Wall -Werror")
 
-add_executable(directgrav ${SOURCES})
-target_link_libraries(directgrav PUBLIC m)
+add_executable(${PROJECT_NAME} ${SOURCES})
+target_link_libraries(${PROJECT_NAME} PUBLIC m)
 
